[package]
name = "json_ops"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["json", "toml", "operator"]
categories = ["parsing", "config"]
description = """
Implement json pointer following the json pointer syntax, with type Option<&toml::Value>.
Overload / as path operator to point into a node in json tree, as well as some other
meaningfull operator overload. 
"""
authors = ["lymslive <lymslive@qq.com>"]
repository = "https://github.com/lymslive/rustspace"
homepage = "https://github.com/lymslive/rustspace"
documentation = "https://docs.rs/json_ops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
toml = { version = "0.7.2", optional = true}

[features]
